feat: implement automated tests and Dockerfile